--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/QuizMaster
-spring.datasource.username=postgres
-spring.datasource.password=supostgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/quizmaster
+spring.datasource.username=quizmaster
+spring.datasource.password=LW3iDyg8V3skEYWk
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
