--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ e2e/*.map
 .idea/**/gradle.xml
 .idea/**/libraries
 
+.idea/**/compiler.xml
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
