--- a/frontend/quizmaster-frontend/package.json
+++ b/frontend/quizmaster-frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
@@ -29,12 +29,11 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~5.0.1",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
+    "@types/jest": "^29.5.2",
+    "jasmine-core": "~4.6.0",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.1.1",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
   }
 }
