--- a/.gitignore
+++ b/.gitignore
@@ -193,4 +193,7 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# Database
+data
+
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,angular,intellij
