--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ e2e/*.map
 .idea/**/libraries
 
 .idea/**/compiler.xml
+.idea/**/jarRepositories.xml
+.idea/**/vcs.xml
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
