--- a/frontend/quizmaster-frontend/package.json
+++ b/frontend/quizmaster-frontend/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.2",
+    "cypress": "^12.15.0",
     "jasmine-core": "~4.6.0",
     "jest": "^29.5.0",
     "jest-preset-angular": "^13.1.1",
