--- a/frontend/quizmaster-frontend/tsconfig.json
+++ b/frontend/quizmaster-frontend/tsconfig.json
@@ -10,10 +10,11 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
@@ -30,5 +31,9 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
     "strictPropertyInitialization": false,
-  }
+  },
+  "exclude": [
+    "cypress.config.ts",
+    "cypress"
+  ]
 }
