--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -17,6 +17,25 @@ jobs:
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
 
+
+  measure-coverage:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Set up JDK 11
+          uses: actions/setup-java@v1
+          with:
+            java-version: 11
+        - name: Run Coverage
+          run: mvn clean verify -Pcoverage
+
+        - name: Publish to SonarCloud
+          uses: sonarsource/sonarcloud-github-action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+
   sonar-analysis:
     runs-on: ubuntu-latest
 
