--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -27,12 +27,8 @@ jobs:
           with:
             java-version: 11
         - name: Run Coverage
-          run: mvn clean verify -Pcoverage
-
-        - name: Publish to SonarCloud
-          uses: sonarsource/sonarcloud-github-action@master
+          run: mvn clean verify sonar:sonar -Pcoverage
           env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 
