--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -27,7 +27,7 @@ jobs:
           with:
             java-version: 11
         - name: Run Coverage
-          run: mvn clean verify sonar:sonar -Pcoverage
+          run: mvn clean verify sonar:sonar -Dsonar.branch.name=${{ github.ref }} -Pcoverage
           env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
