--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -23,13 +23,21 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - name: Set up JDK 11
-          uses: actions/setup-java@v1
+          uses: actions/setup-java@v3
           with:
             java-version: 11
         - name: Run Coverage
-          run: mvn clean verify sonar:sonar -Dsonar.branch.name=${{ github.ref }} -Pcoverage
+          run: mvn clean verify sonar:sonar -Pcoverage
           env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        - name: Add coverage to PR
+          id: jacoco
+          uses: madrapps/jacoco-report@v1.3
+          with:
+            paths: ${{ github.workspace }}/build/reports/jacoco/testCoverage/testCoverage.xml
+            token: ${{ secrets.GITHUB_TOKEN }}
+            min-coverage-overall: 40
+            min-coverage-changed-files: 60
 
 
   sonar-analysis:
