--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -82,3 +82,4 @@ jobs:
         with:
           build: npm run build
           start: npm start
+          working-directory: frontend/quizmaster-frontend
