--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -3,9 +3,8 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
+  build-and-measure-coverage:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
@@ -14,35 +13,22 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
-
-
-  measure-coverage:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: Set up JDK 11
-          uses: actions/setup-java@v1
-          with:
-            java-version: 11
-        - name: Run Coverage
-          run: mvn clean verify
-          env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        - name: Add coverage to PR
-          id: jacoco
-          uses: madrapps/jacoco-report@v1.3
-          with:
-            paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
-            token: ${{ secrets.GITHUB_TOKEN }}
-            min-coverage-overall: 40
-            min-coverage-changed-files: 60
+      - name: Build with Maven and measure coverage
+        run: mvn --batch-mode --update-snapshots verify
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.3
+        with:
+          paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
 
 
   sonar-analysis:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
         with:
@@ -52,6 +38,7 @@ jobs:
         with:
           java-version: 11
           distribution: 'zulu' # Alternative distribution options are available.
+          cache: maven
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
