--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -59,6 +59,11 @@ jobs:
 
   cypress-e2e:
     runs-on: ubuntu-22.04
+    services:
+      backend:
+        image: maven:3.8.1-openjdk-16
+        options: --workdir /app --mount type=bind,source=${{ github.workspace }},target=/app
+        command: mvn spring-boot:run
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -68,5 +73,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           build: npm run build
-          start: npm start
+          start: 'npm start -- --port 4200'
+          wait-on: 'http://localhost:4200'
           working-directory: frontend/quizmaster-frontend
