--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -59,20 +59,33 @@ jobs:
 
   cypress-e2e:
     runs-on: ubuntu-22.04
-    services:
-      backend:
-        image: maven:3.8.1-openjdk-16
-        options: --workdir /app --mount type=bind,source=${{ github.workspace }},target=/app
-        command: mvn spring-boot:run
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Start Backend
+        run: mvn spring-boot:run &
+        working-directory: ./
+
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
           build: npm run build
-          start: 'npm start -- --port 4200'
+          start: 'npm start --port 4200'
           wait-on: 'http://localhost:4200'
           working-directory: frontend/quizmaster-frontend
