--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -88,4 +88,5 @@ jobs:
           build: npm run build
           start: 'npm start'
           wait-on: 'http://localhost:4200'
+          wait-on-timeout: 120
           working-directory: frontend/quizmaster-frontend
