--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -70,7 +70,11 @@ jobs:
           POSTGRESQL_DATABASE: quizmaster
           POSTGRESQL_TIMEZONE: Europe/Berlin
           POSTGRESQL_LOG_TIMEZONE: Europe/Berlin
-        options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=5
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v3
