--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -98,16 +98,22 @@ jobs:
           QUIZ_API_KEY: 78Kd7bqZLyRKpUbVoxSSnSzmzq2lM6IrGTTaXACW
         timeout-minutes: 2
 
-      - name: Ping Backend
-        run: curl --fail --silent http://localhost:8080
+      - name: Install NPM dependencies
+        run: npm ci
+        working-directory: ./frontend/quizmaster-frontend
 
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
+      - name: Start frontend
+        run: |
+          npm start &
+          echo "Waiting for frontend to start"
+          while ! nc -z localhost 4200; do sleep 1; done
+          echo "Frontend started"
+        working-directory: ./frontend/quizmaster-frontend
+        timeout-minutes: 2
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          build: npm run build
-          start: 'npm start'
           wait-on: 'http://localhost:4200'
           wait-on-timeout: 120
           config-file: cypress.config.js
