--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -112,9 +112,6 @@ jobs:
         timeout-minutes: 2
 
       - name: Cypress run
-        uses: cypress-io/github-action@v5
-        with:
-          wait-on: 'http://localhost:4200'
-          wait-on-timeout: 120
-          config-file: cypress.config.js
-          working-directory: ./frontend/quizmaster-frontend
+        run: |
+          cd ./frontend/quizmaster-frontend
+          npx cypress run
