Add cypress screenshots and videos to gitignore

--- a/frontend/quizmaster-frontend/.gitignore
+++ b/frontend/quizmaster-frontend/.gitignore
@@ -55,4 +55,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+cypress/screenshots
+cypress/videos
+
 # End of https://www.toptal.com/developers/gitignore/api/angular,intellij
