--- a/frontend/quizmaster-frontend/angular.json
+++ b/frontend/quizmaster-frontend/angular.json
@@ -76,22 +76,9 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
-            ],
-            "scripts": []
+            "tsConfig": "<rootDir>/src/tsconfig.test.json"
           }
         }
       }
