--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <spring-boot-maven-plugin-version>3.1.1</spring-boot-maven-plugin-version>
         <sonar.organization>franziskagreiner</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.sources>src,frontend</sonar.sources>
     </properties>
 
     <dependencies>
