--- a/frontend/quizmaster-frontend/sonar-project.properties
+++ b/frontend/quizmaster-frontend/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectKey=FranziskaGreiner_QuizMaster
+sonar.projectKey=FranziskaGreiner_QuizMaster:frontend
 sonar.projectName=QuizMaster
 sonar.organization=franziskagreiner
