--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -3,29 +3,68 @@ name: Java CI
 on: [push]
 
 jobs:
-  build-and-measure-coverage:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      # Set up JDK and Node.js
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
           cache: maven
-      - name: Build with Maven and measure coverage
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      # Build
+      - name: Build backend
+        run: mvn --batch-mode --update-snapshots clean package
+      - name: Build frontend
+        run: |
+          cd frontend/quizmaster-frontend
+          npm ci
+          npm run build
+
+  unit-and-integration-test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+
+      # Set up JDK and Node.js
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      # Backend tests and coverage
+      - name: Backend tests
+        run: mvn --batch-mode --update-snapshots test
+      - name: Backend coverage
+        run: mvn --batch-mode --update-snapshots jacoco:report
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: Add coverage to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.3
-        with:
-          paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 40
-          min-coverage-changed-files: 60
 
+      # Frontend tests and coverage
+      - name: Frontend tests
+        run: |
+          cd frontend/quizmaster-frontend
+          npm ci
+          npm test
+      - name: Frontend coverage
+        run: |
+          cd frontend/quizmaster-frontend
+          npm run coverage
 
   sonar-backend-analysis:
     runs-on: ubuntu-latest
@@ -33,12 +72,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      # Set up JDK and Maven
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: 'zulu' # Alternative distribution options are available.
           cache: maven
+
+      # Cache SonarCloud and Maven packages
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
@@ -51,7 +94,9 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
+
+      # Build and analyze
+      - name: Build and SonarCloud scan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -63,6 +108,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      # Set up Node.js and install dependencies
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -70,10 +117,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: frontend/quizmaster-frontend
+
+      # Run tests and analyze
       - name: Run tests
         run: npm test
         working-directory: frontend/quizmaster-frontend
-      - name: SonarCloud Scan
+      - name: SonarCloud scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
           projectBaseDir: frontend/quizmaster-frontend
@@ -98,6 +147,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Set up JDK and cache Maven packages
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -111,6 +161,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      # Start backend and frontend
       - name: Start Backend
         run: |
           mvn spring-boot:run &
@@ -135,11 +186,13 @@ jobs:
         working-directory: ./frontend/quizmaster-frontend
         timeout-minutes: 2
 
+      # Run e2e tests
       - name: Run cypress e2e test
         run: |
           cd ./frontend/quizmaster-frontend
           npx cypress run
 
+      # Install k6 and run load test
       - name: Install k6
         run: |
           sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C780D0BDB1A69C86
