--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Frontend coverage
         run: |
           cd frontend/quizmaster-frontend
-          npm run coverage
+          ng test --no-watch --code-coverage
 
   sonar-frontend-analysis:
     runs-on: ubuntu-latest
@@ -129,7 +129,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify jacoco:report org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=FranziskaGreiner_QuizMaster
 
-  e2e-and-performance-tests:
+  e2e-performance-security-tests:
     runs-on: ubuntu-22.04
     services:
       postgres:
@@ -203,3 +203,10 @@ jobs:
         run: |
           cd ./src/test/performance
           k6 run load-test.js
+
+      # Run Dastardly security scan
+      - name: Dastardly Scan Action
+        uses: PortSwigger/dastardly-github-action@v1.0.0
+        with:
+          target-url: 'http://localhost:4200'
+
