--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -138,7 +138,7 @@ jobs:
           - '5432:5432'
         env:
           POSTGRESQL_USERNAME: quizmaster
-          POSTGRESQL_PASSWORD: LW3iDyg8V3skEYWk
+          POSTGRESQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
           POSTGRESQL_DATABASE: quizmaster
           POSTGRESQL_TIMEZONE: Europe/Berlin
           POSTGRESQL_LOG_TIMEZONE: Europe/Berlin
@@ -152,9 +152,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-
-      - name: Set JAVA_HOME
-        run: echo "JAVA_HOME=${{ env.JAVA_HOME }}" >> $GITHUB_ENV
 
       - name: Cache Maven packages
         uses: actions/cache@v2
@@ -172,7 +169,7 @@ jobs:
           echo "Backend started"
         working-directory: ./
         env:
-          QUIZ_API_KEY: 78Kd7bqZLyRKpUbVoxSSnSzmzq2lM6IrGTTaXACW
+          QUIZ_API_KEY: ${{ secrets.QUIZ_API_KEY }}
         timeout-minutes: 2
 
       - name: Install NPM dependencies
@@ -209,6 +206,8 @@ jobs:
 
       # Run Dastardly security scan
       - name: Dastardly Scan Action
+        env:
+          JAVA_HOME: /usr/lib/jvm/adopt-17
         uses: PortSwigger/dastardly-github-action@v1.0.0
         with:
           target-url: 'http://localhost:8080/quiz'
