--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/quizmaster
 spring.datasource.username=quizmaster
-spring.datasource.password=LW3iDyg8V3skEYWk
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
