Set password and key as variables

--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -170,6 +170,7 @@ jobs:
         working-directory: ./
         env:
           QUIZ_API_KEY: ${{ secrets.QUIZ_API_KEY }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         timeout-minutes: 2
 
       - name: Install NPM dependencies
