--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -208,7 +208,7 @@ jobs:
       # Run Dastardly security scan
       - name: Dastardly Scan Action
         env:
-          JAVA_HOME: /usr/lib/jvm/adopt-17
+          JAVA_HOME: ${{ env.RUNNER_TOOL_CACHE }}/Java_Adopt_jdk/17.0.7-7/x64
         uses: PortSwigger/dastardly-github-action@v1.0.0
         with:
           target-url: 'http://localhost:8080/quiz'
