--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -205,10 +205,13 @@ jobs:
           cd ./src/test/performance
           k6 run load-test.js
 
+      - name: Print JAVA_HOME
+        run: echo $JAVA_HOME
+
       # Run Dastardly security scan
       - name: Dastardly Scan Action
         env:
-          JAVA_HOME: ${{ env.RUNNER_TOOL_CACHE }}/Java_Adopt_jdk/17.0.7-7/x64
+          JAVA_HOME: ${{ env.JAVA_HOME }}
         uses: PortSwigger/dastardly-github-action@v1.0.0
         with:
           target-url: 'http://localhost:8080/quiz'
