--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -211,7 +211,8 @@ jobs:
       # Run Dastardly security scan
       - name: Dastardly Scan Action
         env:
-          JAVA_HOME: ${{ env.JAVA_HOME }}
+          JAVA_HOME: /usr/lib/jvm/adopt-17
+          PATH: ${{ env.JAVA_HOME }}/bin:${{ env.PATH }}
         uses: PortSwigger/dastardly-github-action@v1.0.0
         with:
           target-url: 'http://localhost:8080/quiz'
