--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -65,69 +65,55 @@ jobs:
           cd frontend/quizmaster-frontend
           npm test --no-watch --code-coverage
 
-  sonar-frontend-analysis:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+sonar-analysis:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-      # Set up Node.js and install dependencies
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install dependencies
-        run: npm ci
-        working-directory: frontend/quizmaster-frontend
+    # Set up JDK and Maven
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: 17
+        distribution: 'zulu' # Alternative distribution options are available.
+        cache: maven
 
-      # Run tests and analyze
-      - name: Run tests
-        run: npm test
-        working-directory: frontend/quizmaster-frontend
-      - name: SonarCloud scan
-        uses: SonarSource/sonarcloud-github-action@master
-        with:
-          projectBaseDir: frontend/quizmaster-frontend
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # Cache SonarCloud and Maven packages
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
 
-  sonar-backend-analysis:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+    # Build and analyze backend
+    - name: Build backend and generate code coverage
+      run: mvn -B verify jacoco:report
 
-      # Set up JDK and Maven
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available.
-          cache: maven
+    # Build and analyze frontend
+    - name: Build frontend and generate code coverage
+      run: |
+        cd frontend/quizmaster-frontend
+        npm ci
+        npm run build
 
-      # Cache SonarCloud and Maven packages
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+    # SonarCloud scan
+    - name: SonarCloud scan
+      uses: SonarSource/sonarcloud-github-action@master
+      with:
+        organization: "franziskagreiner"
+        token: ${{ secrets.SONAR_TOKEN }}
+        projectKey: "FranziskaGreiner_QuizMaster"
+        sources: "."
 
-      # Build and analyze
-      - name: Build and SonarCloud scan
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify jacoco:report org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=FranziskaGreiner_QuizMaster
 
   e2e-performance-security-tests:
     runs-on: ubuntu-22.04
@@ -205,12 +191,12 @@ jobs:
           cd ./src/test/performance
           k6 run load-test.js
 
-      # Run Dastardly security scan
-      - name: Dastardly Scan Action
-        env:
-          JAVA_HOME: /usr/lib/jvm/adopt-17
-          PATH: ${{ env.JAVA_HOME }}/bin:${{ env.PATH }}
-        uses: PortSwigger/dastardly-github-action@main
-        with:
-          target-url: 'http://localhost:8080/quiz'
+#      # Run Dastardly security scan
+#      - name: Dastardly Scan Action
+#        env:
+#          JAVA_HOME: /usr/lib/jvm/adopt-17
+#          PATH: ${{ env.JAVA_HOME }}/bin:${{ env.PATH }}
+#        uses: PortSwigger/dastardly-github-action@main
+#        with:
+#          target-url: 'http://localhost:8080/quiz'
 
