--- a/frontend/quizmaster-frontend/package.json
+++ b/frontend/quizmaster-frontend/package.json
@@ -30,7 +30,10 @@
     "@angular/compiler-cli": "^16.1.3",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "cypress": "^12.15.0",
+    "eslint": "^8.44.0",
     "jest": "^29.5.0",
     "jest-preset-angular": "^13.1.1",
     "typescript": "~5.1.3"
