--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -180,12 +180,18 @@ jobs:
   eslint-frontend-analysis:
     runs-on: ubuntu-latest
     steps:
-      - name: ESLint
-        run: |
-          cd ./frontend/quizmaster-frontend
-          npx eslint .
-        env:
-          VALIDATE_ESLINT: true
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - uses: sibiraj-s/action-eslint@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          eslint-args: '--ignore-path=.gitignore --quiet'
+          extensions: 'js,jsx,ts,tsx'
+          annotations: true
+        working-directory: ./frontend/quizmaster-frontend
 
 #      # Run Dastardly security scan
 #      - name: Dastardly Scan Action
