Update eslint in pipeline

--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -190,7 +190,7 @@ jobs:
       - uses: sibiraj-s/action-eslint@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          eslint-args: '--ignore-path=.gitignore --quiet'
+          eslint-args: '--ignore-path=frontend/quizmaster-frontend/.gitignore --quiet'
           extensions: 'js,jsx,ts,tsx'
           annotations: true
 
