Fix eslint in pipeline

--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -198,12 +198,7 @@ jobs:
         run: npm run build
 
       - name: Run ESLint
-        uses: sibiraj-s/action-eslint@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          eslint-args: '--ignore-path=frontend/quizmaster-frontend/.gitignore --quiet'
-          extensions: 'js,jsx,ts,tsx'
-          annotations: true
+        run: npx eslint .
 
 #      # Run Dastardly security scan
 #      - name: Dastardly Scan Action
